syntax = "proto3";

package generated;

option go_package = "github.com/gamedb/gamedb/pkg/backend/generated";

message Empty {
}

message Price {
    bool exists = 1;
    string currency = 2;
    int32 initial = 3;
    int32 final = 4;
    int32 discount_percent = 5;
    int32 individual = 6;
    bool free = 7;
}

message PaginationRequest {
    int64 offset = 1;
    int64 limit = 2;
    string sortField = 3;
    string sortOrder = 4;
}

message PaginationResponse {
    int64 offset = 1;
    int64 limit = 2;
    int64 total = 3;
    int64 totalFiltered = 4;
    int64 pagesTotal = 5;
    int64 pagesCurrent = 6;
}

message PaginationRequest2 {
    int64 page = 1;
    int64 limit = 2;
}
